# void_engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  SHELL_FIXES_NEEDED.txt  build_test.bat
examples/package_demo/: CMakeLists.txt  main.cpp
examples/package_primitives/: CMakeLists.txt  main.cpp
legacy/: Cargo.toml
legacy/crates/void_ai/: Cargo.toml
legacy/crates/void_asset/: Cargo.toml
legacy/crates/void_asset_server/: Cargo.toml
legacy/crates/void_audio/: Cargo.toml
legacy/crates/void_combat/: Cargo.toml
legacy/crates/void_compositor/: Cargo.toml
legacy/crates/void_core/: Cargo.toml
legacy/crates/void_cpp/: Cargo.toml
legacy/crates/void_ecs/: Cargo.toml
legacy/crates/void_editor/: Cargo.toml
legacy/crates/void_engine/: Cargo.toml
legacy/crates/void_event/: Cargo.toml
legacy/crates/void_gamestate/: Cargo.toml
legacy/crates/void_graph/: Cargo.toml
legacy/crates/void_hud/: Cargo.toml
legacy/crates/void_inventory/: Cargo.toml
legacy/crates/void_ir/: Cargo.toml  README.md
legacy/crates/void_kernel/: Cargo.toml
legacy/crates/void_math/: Cargo.toml
legacy/crates/void_memory/: Cargo.toml
legacy/crates/void_physics/: Cargo.toml
legacy/crates/void_presenter/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  MIGRATION.md  QUICK_START.md  README.md
legacy/crates/void_render/: Cargo.toml  LAYER_COMPOSITOR.md
legacy/crates/void_runtime/: Cargo.toml
legacy/crates/void_script/: Cargo.toml
legacy/crates/void_scripting/: Cargo.toml
legacy/crates/void_services/: Cargo.toml
legacy/crates/void_shader/: Cargo.toml  IMPLEMENTATION.md  README.md
legacy/crates/void_shell/: Cargo.toml
legacy/crates/void_structures/: Cargo.toml
legacy/crates/void_triggers/: Cargo.toml
legacy/crates/void_ui/: Cargo.toml
legacy/crates/void_xr/: Cargo.toml
legacy/docs/: GAME_LOGIC_REQUIREMENTS.md  IMPLEMENTATION_GUIDE.md  developer-guide.md  example-config-reference.md  missing-renderer-features.md  project-summary.md
legacy/docs/architecture/: app-runtime-interface.md  apps.md  code-index.json  code-index.md  cpp-blueprint-architecture.md  runtime-requirements.md
legacy/docs/input-formats/: 00-index.md  01-manifest-toml.md  02-scene-basics.md  03-entities.md  04-materials.md  05-advanced-materials.md  06-animations.md  07-cameras.md  08-lights.md  09-shadows.md  10-environment.md  11-particles.md  12-textures.md  13-input-config.md  14-picking.md  15-lod.md  16-debug.md  17-spatial.md  18-boot-config.md  19-layers.md  20-meshes.md  21-scripting.md  22-triggers.md  23-physics.md  24-combat.md  25-inventory.md  26-audio.md  27-state.md  28-ui-hud.md  29-ai-navigation.md
legacy/docs/renderer-roadmap/: README.md  hot-swap-addendum.md  phase-01-scene-graph.md  phase-02-camera-system.md  phase-03-mesh-import.md  phase-04-instancing.md  phase-05-lighting.md  phase-06-shadow-mapping.md  phase-07-advanced-materials.md  phase-08-keyframe-animation.md  phase-09-animation-blending.md  phase-10-picking-raycasting.md  phase-11-entity-input-events.md  phase-12-multi-pass-entities.md  phase-13-custom-render-passes.md  phase-14-spatial-queries.md  phase-15-lod-system.md  phase-16-scene-streaming.md  phase-18-debug-hooks.md  (+1 more)
plugins/: CMakeLists.txt
plugins/base.health/: CMakeLists.txt  health_plugin.cpp  health_plugin.hpp  manifest.plugin.json
plugins/example_ai/: CMakeLists.txt  example_ai_plugin.cpp  example_ai_plugin.hpp
src/ai/: CMakeLists.txt  ai.cpp  behavior_tree.cpp  blackboard.cpp  navmesh.cpp  perception.cpp  steering.cpp  types.cpp
src/asset/: CMakeLists.txt  asset.cpp  asset_registry.cpp  cache.cpp  handle.cpp  http_client.cpp  loader.cpp  remote.cpp  server.cpp  stb_impl.cpp  storage.cpp  stub.cpp  websocket_client.cpp
src/audio/: CMakeLists.txt  backend.cpp  buffer.cpp  effects.cpp  listener.cpp  miniaudio_backend.cpp  mixer.cpp  source.cpp  types.cpp
src/compositor/: CMakeLists.txt  compositor.cpp  compositor_module.cpp  frame.cpp  hdr.cpp  input.cpp  layer_compositor.cpp  output.cpp  rehydration.cpp  stub.cpp  vrr.cpp
src/cpp/: CMakeLists.txt  compiler.cpp  compiler.hpp  fwd.hpp  hot_reload.cpp  hot_reload.hpp  instance.cpp  instance.hpp  module.cpp  module.hpp  system.cpp  system.hpp  types.cpp  types.hpp
src/input/: CMakeLists.txt  action.cpp  input.cpp  types.cpp
src/kernel/: CMakeLists.txt  hot_reload_orchestrator.cpp  kernel.cpp  module_loader.cpp  sandbox.cpp  supervisor.cpp  types.cpp
src/physics/: CMakeLists.txt  backend.cpp  body.cpp  broadphase.cpp  character.cpp  collision.cpp  physics.cpp  query.cpp  shape.cpp  simulation.cpp  snapshot.cpp  solver.cpp  types.cpp  world.cpp
src/presenter/: CMakeLists.txt  backend_factory.cpp  frame.cpp  multi_backend_presenter.cpp  opengl_backend.cpp  presenter.cpp  rehydration.cpp  stub.cpp  surface.cpp  swapchain.cpp  timing.cpp
src/render/: CMakeLists.txt  animation.cpp  backend.cpp  components.cpp  debug_renderer.cpp  gl_renderer.cpp  gltf_loader.cpp  instancing.cpp  lod.cpp  post_process.cpp  render_assets.cpp  render_graph.cpp  render_systems.cpp  shadow_renderer.cpp  spatial.cpp  stub.cpp  temporal_effects.cpp  texture.cpp
src/runtime/: CMakeLists.txt  crash_handler.cpp  crash_handler.hpp  fwd.hpp  input.cpp  input.hpp  layer.cpp  layer.hpp  mode_selector.cpp  platform.cpp  runtime.cpp  runtime_legacy.cpp  runtime_legacy.hpp  scene_loader.cpp  scene_loader.hpp  scene_parser.cpp  scene_parser.hpp  scene_types.hpp  stub.cpp  window.cpp  window.hpp
src/shader/: CMakeLists.txt  stub.cpp
src/shell/: CMakeLists.txt  builtins.cpp  builtins.hpp  command.cpp  command.cpp.bak  command.cpp.tmp  command.hpp  command_fix.txt  fwd.hpp  parser.cpp  parser.hpp  remote.cpp  remote.hpp  session.cpp  session.hpp  shell.cpp  shell.hpp  stub.cpp  types.cpp  types.hpp
src/ui/: CMakeLists.txt  context.cpp  font.cpp  gl_renderer.cpp  theme.cpp  widgets.cpp
src/widget/: CMakeLists.txt  commands.cpp  types.cpp  widget_state_core.cpp
src/xr/: CMakeLists.txt  openxr_backend.cpp  stub.cpp  xr_snapshot.cpp  xr_system.cpp
widgets/core/: CMakeLists.txt  core_widget.cpp  core_widget.hpp
(+1130 files in other folders)
