[workspace]
resolver = "2"
exclude = [
    "examples/plugins/gun",  # Built separately to WASM
]
members = [
    "crates/void_core",
    "crates/void_math",
    "crates/void_memory",
    "crates/void_structures",
    "crates/void_ecs",
    "crates/void_event",
    "crates/void_asset",
    "crates/void_render",
    "crates/void_graph",
    "crates/void_xr",
    "crates/void_engine",
    "crates/void_ui",
    "crates/void_asset_server",
    "crates/void_scripting",
    "crates/void_editor",
    "crates/void_ir",
    "crates/void_kernel",
    "crates/void_shader",
    "crates/void_presenter",
    "crates/void_shell",
    "crates/void_script",
    "crates/void_services",
    "crates/void_compositor",
    "crates/void_cpp",
    "crates/void_physics",
    "crates/void_combat",
    "crates/void_triggers",
    "crates/void_inventory",
    "crates/void_audio",
    "crates/void_gamestate",
    "crates/void_hud",
    "crates/void_ai",
    "crates/void_runtime",
    "examples/shader-preview",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Void Engine Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/adptve/void-engine"

[workspace.dependencies]
# Internal crates
void_core = { path = "crates/void_core" }
void_math = { path = "crates/void_math" }
void_memory = { path = "crates/void_memory" }
void_structures = { path = "crates/void_structures" }
void_ecs = { path = "crates/void_ecs" }
void_event = { path = "crates/void_event" }
void_asset = { path = "crates/void_asset" }
void_render = { path = "crates/void_render" }
void_graph = { path = "crates/void_graph" }
void_xr = { path = "crates/void_xr" }
void_engine = { path = "crates/void_engine" }
void_ui = { path = "crates/void_ui" }
void_asset_server = { path = "crates/void_asset_server" }
void_scripting = { path = "crates/void_scripting" }
void_ir = { path = "crates/void_ir" }
void_kernel = { path = "crates/void_kernel" }
void_shader = { path = "crates/void_shader" }
void_presenter = { path = "crates/void_presenter" }
void_shell = { path = "crates/void_shell" }
void_script = { path = "crates/void_script" }
void_services = { path = "crates/void_services" }
void_compositor = { path = "crates/void_compositor" }
void_cpp = { path = "crates/void_cpp" }
void_physics = { path = "crates/void_physics" }
void_combat = { path = "crates/void_combat" }
void_triggers = { path = "crates/void_triggers" }
void_inventory = { path = "crates/void_inventory" }
void_audio = { path = "crates/void_audio" }
void_gamestate = { path = "crates/void_gamestate" }
void_hud = { path = "crates/void_hud" }
void_ai = { path = "crates/void_ai" }

# External - minimal dependencies
calloop = "0.14"
base64 = "0.22"
parking_lot = "0.12"
bincode = "1.3"
thiserror = "1.0"
naga = { version = "0.14", features = ["wgsl-in", "spv-out", "glsl-out", "validate"] }
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
notify = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "hdr"] }

# 3D Asset Loading
gltf = { version = "1.4", features = ["KHR_lights_punctual"] }

# Async / Networking
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5"

# Graphics and windowing
wgpu = "22"
winit = "0.30"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rfd = "0.15"
glam = "0.24"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
